After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793873 - msdk: msdkmjpegenc doesn't work.
msdk: msdkmjpegenc doesn't work.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 789886
 
 
Reported: 2018-02-27 08:54 UTC by Fei
Modified: 2018-03-29 19:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mjpeg: dont' set extended coding options (3.53 KB, patch)
2018-03-28 23:58 UTC, sreerenj
none Details | Review

Description Fei 2018-02-27 08:54:59 UTC
[root@gst-msdk encode_jpeg]# gst-launch-1.0 videotestsrc num-buffers=100 ! video/x-raw,format=NV12,width=1920,height=1080 ! msdkmjpegenc quality=40 ! filesink location=test.jpeg
Setting pipeline to PAUSED ...
libva info: VA-API version 0.99.0
libva info: va_getDriverName() returns 0
libva info: User requested driver 'iHD'
libva info: Trying to open /opt/intel/mediasdk/lib64/iHD_drv_video.so
libva info: Found init function __vaDriverInit_0_32
libva info: va_openDriver() returns 0
Pipeline is PREROLLING ...
Got context from element 'msdkmjpegenc0': gst.msdk.Context=context, gst.msdk.Context=(GstMsdkContext)"\(GstMsdkContext\)\ msdkcontext0";
0:00:00.014405244 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
0:00:00.014467330 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
0:00:00.020420861 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
0:00:00.020487958 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
0:00:00.020615667 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
0:00:00.020669339 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
ERROR: from element /GstPipeline:pipeline0/GstVideoTestSrc:videotestsrc0: Internal data stream error.
Additional debug info:
gstbasesrc.c(3055): gst_base_src_loop (): /GstPipeline:pipeline0/GstVideoTestSrc:videotestsrc0:
streaming stopped, reason not-negotiated (-4)
0:00:00.020689145 20958      0x141acf0 ERROR                msdkenc gstmsdkenc.c:401:gst_msdkenc_init_encoder:<msdkmjpegenc0> Video Encode Query failed (undeveloped feature)
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 sreerenj 2018-03-28 23:58:46 UTC
Created attachment 370272 [details] [review]
mjpeg: dont' set extended coding options

Please try this patch
Comment 2 Fei 2018-03-29 06:42:05 UTC
@zj, Could you help to have a test of this patch? Thanks.
Comment 3 zj,wang 2018-03-29 07:04:05 UTC
After apply this patch based on commit 48cde372d6f5b9feff464bffb734686e0cbf0ca1 labeled release 1.14.0, this issue will be fixed, so close it.
Comment 4 sreerenj 2018-03-29 19:00:56 UTC
Pushed as commit f1f148fe7cf55ab714fbf398bf97ef710bfd350c .
Also cherry-picked to 1.14