msdk: Don't set extended coding options for JPEG encode

MJPEG doesn't have support for extended coding options

https://bugzilla.gnome.org/show_bug.cgi?id=793873